[package]
name = "rusty_buisness_analyze"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = { version = "0.6.5", default-features = false }
goblin = "0.9.2"
anyhow = "1.0.91"
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"] }
rand = "0.9.0-alpha.1"
iced-x86 = { version = "1.21.0", features = ["code_asm", "decoder", "fast_fmt", "instr_info", "masm", "std"], default-features = false }
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Memory"] }
